feat: adding docs for routes
